ON-61-Article-Pages Integrate share icons into article, fix spacing

--- a/app/styleguides/demo/components/article.css
+++ b/app/styleguides/demo/components/article.css
@@ -75,10 +75,10 @@
             color: $color;
           }
         }
-        @mixin author-name-color entertainment, $sunsetOrange;
-        @mixin author-name-color news, $lightningYellow;
-        @mixin author-name-color sports, $azureRadience;
-        @mixin author-name-color podcasts, $robinsEgg;
+        @mixin author-name-color Entertainment, $sunsetOrange;
+        @mixin author-name-color News, $lightningYellow;
+        @mixin author-name-color Sports, $azureRadience;
+        @mixin author-name-color Podcasts, $robinsEgg;
         .author__anchor {
           color: inherit;
           text-decoration: none;
@@ -96,7 +96,7 @@
     }
     .info__timestamp {
       @mixin article-font9;
-      display: inline-block;
+      display: block;
       margin-top: em(15, 12);
       .timestamp__update {}
       .timestamp__date {
@@ -110,6 +110,9 @@
           display: inline-block;
         }
       }
+    }
+    .info--right-bottom {
+      margin-top: em(40);
     }
   }
   .body__content {
@@ -150,9 +153,15 @@
       .info--left-top {
         margin-right: em(20);
       }
+      .info--right-bottom {
+        margin-top: 0;
+      }
       .info__timestamp {
         margin-top: em(10, 12);
       }
+    }
+    .body__content {
+      margin-top: em(40);
     }
   }
 }
@@ -170,7 +179,10 @@
   .article__body[data-lead-type=instagram],
   .article__body[data-lead-orientation=vertical] {
     .body__info {
-      margin-top: em(30)
+      margin-top: em(20);
+    }
+    .body__content {
+      margin-top: em(50);
     }
   }
 }
@@ -181,6 +193,12 @@
     .body__header {
       width: calc(100% + em(40));
       margin: 0 em(-20);
+    }
+    .body__info {
+      margin-top: em(30);
+    }
+    .body__content {
+      margin-top: em(40);
     }
   }
 }
@@ -340,38 +358,4 @@
     position: relative;
     top: em(-7, 10);
   }
-}
-
-.article__breadcrumb {
-  .breadcrumb__link {
-    display: inline-block;
-    @mixin article-font12;
-    text-transform: uppercase;
-    text-decoration: none;
-
-
-    &--home {
-      height: em(10, 14);
-      width: em(10, 14);
-      margin-right: em(13, 14);
-      line-height: em(14, 14);
-
-      &:before {
-        display: none;
-      }
-    }
-  }
-
-  @define-mixin seperator $articleType, $color: $purple {
-    .component--article[data-article-type=$articleType] & .breadcrumb__separator {
-      @mixin article-font12;
-      color: $color;
-    }
-  }
-
-  @mixin seperator;
-  @mixin seperator entertainment, $sunsetOrange;
-  @mixin seperator news, $lightningYellow;
-  @mixin seperator podcasts, $robinsEgg;
-  @mixin seperator sports, $azureRadience;
 }
