--- a/app/styleguides/demo/components/share.css
+++ b/app/styleguides/demo/components/share.css
@@ -2,7 +2,6 @@
 @import "_global/colors";
 
 .component--share {
-  margin-top: em(30);
   display: flex;
   flex-direction: column;
 
@@ -88,8 +87,7 @@
 
 @mixin large-screen {
   .component--share {
-    /* Clear top-margin, float right, and change list to horizontal */
-    margin-top: 0;
+    /* Float right and change list to horizontal */
     float: right;
     flex-direction: row;
   }
@@ -99,5 +97,11 @@
       margin-top: 0; /* Clear vertical margin-top */
       margin-left: em(-1); /* Move items to the left on horizontal layout */
     }
+  }
+}
+
+@mixin small-screen {
+  .component--share {
+    float: none;
   }
 }
